bugfix: source link and adjust margin on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1476,7 +1476,7 @@ button,input,select,textarea {
 
 @media only screen and (max-width: 640px) {
     .inner {
-        padding:0 1rem
+        padding:0 2rem
     }
 }
 
